# RAG-Module

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: git-leaks-check.yml  gitleaks-check.yml  pyright-check.yml  pyright-type-check.yml  pytest-testcases-check.yml  ruff-format-check.yml  ruff-lint-check.yml  uv-env-check.yml
grafana-configs/: README.md  docker-compose-logging.yml  grafana-dashboard-deployment.json  grafana-dashboards.yaml  grafana-datasources.yaml  loki_logger.py
src/: main.py
tests/: README.md  test_dummy.py
